Interim update to fix spacing gallery space issues

--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -88,9 +88,9 @@
   width: 100vw;
 }
 
-.wp-block-gallery:not(.components-placeholder) {
-	margin: (-$content-padding);
-}
+//.wp-block-gallery:not(.components-placeholder) {
+//	margin: (-$content-padding);
+//}
 
 .wp-block-cover-text p {
   padding: 1.5em 14px;
